misc/terraform/ec2.tf
resource "aws_instance" "FarmecAPI" {
  ami           = "ami-0905a3c97561e0b69"
  instance_type = "t3.micro"
  subnet_id     = aws_subnet.farmec_subnet.id  
  key_name      = aws_key_pair.farmec-ec2.key_name
  vpc_security_group_ids = [aws_security_group.my_ec2_sg.id]  

  root_block_device {
    volume_size = 20
    volume_type = "gp3"
  }

  tags = {
    Name = "FarmecAPI"
  }
}

resource "aws_eip" "farmec_eip" {
  instance = aws_instance.FarmecAPI.id

  tags = {
    Name = "FarmecAPI EIP"
  }
}
